--- a/Python - Beginner Workshop.ipynb
+++ b/Python - Beginner Workshop.ipynb
@@ -10,7 +10,7 @@
     "### Basics, Datentypen, Schleifen, Funktionen und Klassen, Idiome\n",
     "\n",
     "#### Einleitung\n",
-    "Dieses Notebook enthält das gesamte Material dieses Workshops und dient als interaktive Resource.  \n",
+    "Dieses Notebook enthält das gesamte Material des Workshops und dient als interaktive Resource.  \n",
     "Code-Zellen können mit Strg+Enter oder Shift+Enter ausgeführt werden."
    ]
   },
@@ -78,7 +78,7 @@
    "metadata": {},
    "source": [
     "## Datentypen\n",
-    "Neben den Standarddatentypen (int, float, bool, str) sind vor allem dictionaries äußerst nützlich und auch innerhalb der Python Standard library sehr weit verbreitet\n",
+    "Neben den Standarddatentypen (int, float, bool, str) sind vor allem dictionaries äußerst nützlich und auch innerhalb der Python Standardlibrary sehr weit verbreitet\n",
     "<table><tr>\n",
     "<td> <img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/Python_3._The_standard_type_hierarchy.png/370px-Python_3._The_standard_type_hierarchy.png\" alt=\"Drawing\" style=\"width: 500px;\"/> </td>\n",
     "<td> <img src=\"https://paulvanderlaken.files.wordpress.com/2019/11/image-7.png\" alt=\"Drawing\" style=\"width: 500px;\"/> </td>\n",
@@ -143,7 +143,8 @@
      "output_type": "stream",
      "text": [
       "{'key': 'value1', (0, 1): 'value2'}\n",
-      "[1, 2]\n"
+      "[1, 2]\n",
+      "True\n"
      ]
     },
     {
@@ -153,7 +154,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [16]\u001b[0m, in \u001b[0;36m<cell line: 11>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(my_dict[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mkey2\u001b[39m\u001b[38;5;124m\"\u001b[39m])       \u001b[38;5;66;03m# indizierbar\u001b[39;00m\n\u001b[1;32m     10\u001b[0m l \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m]\n\u001b[0;32m---> 11\u001b[0m \u001b[43mmy_dict\u001b[49m\u001b[43m[\u001b[49m\u001b[43ml\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mspam\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;32m/tmp/ipykernel_3431/4145752727.py\u001b[0m in \u001b[0;36m<cell line: 13>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0ml\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mmy_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"spam\"\u001b[0m          \u001b[0;31m# Fehler! keys müssen unveränderlich sein!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'list'"
      ]
     }
@@ -187,8 +188,9 @@
     "* Sets\n",
     "* Strings\n",
     "* Generators\n",
+    "* Iterators\n",
     "\n",
-    "Im Gegensatz zu anderen Programmiersprachen wird standardmäßig *direkt* über die Elemente itteriert, nicht über einen index"
+    "Im Gegensatz zu anderen Programmiersprachen wird standardmäßig *direkt* über die Elemente itteriert, nicht über einen Index"
    ]
   },
   {
@@ -223,7 +225,7 @@
    "source": [
     "colors = [\"green\", \"red\", \"blue\"]\n",
     "for i in range(len(colors)):           # iteration über index wie in Java oder C\n",
-    "    print(colors[i])                   # sieht so umständlich aus, dass es nicht *richtig* sein kann\n",
+    "    print(colors[i])                   # sieht so umständlich aus, dass es nicht richtig sein *kann*\n",
     "print()\n",
     "\n",
     "for color in colors:                   # pythonic, for each in Java oder C++\n",
@@ -435,6 +437,87 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c2cd38fc",
+   "metadata": {},
+   "source": [
+    "### Parameterübergabe\n",
+    "Python verwendet pass-by-object-reference, in-place Änderungen von mutable Objekten haben einen Effekt außerhalb der Funktion, Zuweisungen hingegen nicht!  \n",
+    "**Best practice:** Funktionen sollten keine Parameter verändern, sondern neue Objekte erzeugen und diese zurückgeben. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "affd0565",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\n",
+      "[0, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reassign(var):\n",
+    "    var = [0,1]\n",
+    "    \n",
+    "def append(var):\n",
+    "    var.append(1)\n",
+    "    \n",
+    "my_list = [0]\n",
+    "reassign(my_list)\n",
+    "print(my_list)\n",
+    "append(my_list)\n",
+    "print(my_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d1b5738",
+   "metadata": {},
+   "source": [
+    "## Exception Handling\n",
+    "> I asked God for a bike, but I know God doesn't work that way. So I stole a bike and asked for forgiveness.\n",
+    ">\n",
+    "> — Emo Philips\n",
+    "\n",
+    "In Python gilt das Prinzip *Easier to Ask for Forgiveness than Permission* als best-practice (im Gegensatz zu *Look Before You Leap*).  \n",
+    "Exceptions können mit dem try / except / finally Konstrukt abgefangen und gemanaged werden."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "4a49c902",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "division by zero\n",
+      "Finishing up.\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "b = 0\n",
+    "\n",
+    "try:                                # Code der eine Exception erzeugen könnte innerhalb try\n",
+    "    c = a / b\n",
+    "    print(c)\n",
+    "except ZeroDivisionError as error:  # Fehler wird abgefangen falls Exception aufgetreten\n",
+    "    print(error)                    # Error-Handling\n",
+    "finally:                            # Finally Block wird IMMER ausgeführt, egal ob es einen Fehler gab oder nicht\n",
+    "    print('Finishing up.')          "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6fb6e6e1",
    "metadata": {},
    "source": [
@@ -483,18 +566,18 @@
    "id": "d9d216a1",
    "metadata": {},
    "source": [
-    "Dunder Methoden zB \\_\\_init\\_\\_ sind Methoden mit spezieller Funktion, die von built-in Funktionen aufgerufen werden oder für die Logik für Operatoren implementieren.\n",
+    "Dunder Methoden zB \\_\\_init\\_\\_ sind Methoden mit spezieller Funktion, die von built-in Funktionen aufgerufen werden oder die Logik für Operatoren implementieren.\n",
     "\n",
     "Eine (unvollständige) Übersicht:\n",
-    "* \\_\\_init\\_\\_\n",
-    "* \\_\\_repr\\_\\_\n",
-    "* \\_\\_str\\_\\_\n",
-    "* \\_\\_lt\\_\\_\n",
-    "* \\_\\_ge\\_\\_\n",
-    "* \\_\\_eq\\_\\_\n",
-    "* \\_\\_ne\\_\\_\n",
-    "* \\_\\_gt\\_\\_\n",
-    "* \\_\\_ge\\_\\_\n",
+    "* \\_\\_init\\_\\_ \n",
+    "* \\_\\_repr\\_\\_ \n",
+    "* \\_\\_str\\_\\_ \n",
+    "* \\_\\_lt\\_\\_ \n",
+    "* \\_\\_le\\_\\_ \n",
+    "* \\_\\_eq\\_\\_ \n",
+    "* \\_\\_ne\\_\\_ \n",
+    "* \\_\\_ge\\_\\_ \n",
+    "* \\_\\_gt\\_\\_ \n",
     "* \\_\\_bool\\_\\_\n",
     "* \\_\\_call\\_\\_\n",
     "* \\_\\_len\\_\\_\n",
@@ -1149,6 +1232,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "0a6c9621",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def create_counter():         # Alternative 2 mit geschachtelter Funktion\n",
+    "    value = 0                 # Initialisierung\n",
+    "    def counter_fcn():        # inner Funktion\n",
+    "        nonlocal value        # erlaubt es value zu verändern\n",
+    "        value += 1\n",
+    "        return value          # return der inneren Funktion\n",
+    "    return counter_fcn        # äußere Funktion gibt innere Funktion zurück\n",
+    "\n",
+    "counter = create_counter()\n",
+    "for idx in range(3):\n",
+    "    print(counter())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "18ebe206",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "2\n",
+      "1\n",
+      "Liftoff!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def countdown(n):\n",
+    "    value = n\n",
+    "    while True:\n",
+    "        if value == 0:\n",
+    "            yield \"Liftoff!\"\n",
+    "            break\n",
+    "        else:\n",
+    "            yield value\n",
+    "            value-=1\n",
+    "for i in countdown(3):\n",
+    "    print(i)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "32764e48",
    "metadata": {},
@@ -1159,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "3f538c22",
    "metadata": {},
    "outputs": [
