--- a/Python - Advanced Workshop.ipynb
+++ b/Python - Advanced Workshop.ipynb
@@ -5,9 +5,7 @@
    "id": "c7595815",
    "metadata": {},
    "source": [
-    "# Python Workshop for Beginners\n",
-    "\n",
-    "### Basics, Datentypen, Schleifen, Funktionen und Klassen, Idiome\n",
+    "# Python Advanced Workshop\n",
     "\n",
     "#### Einleitung\n",
     "Dieses Notebook enthält das gesamte Material des Workshops und dient als interaktive Resource.  \n",
