--- a/Python - Beginner Workshop.ipynb
+++ b/Python - Beginner Workshop.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "c08bc8f8",
    "metadata": {},
    "outputs": [
@@ -96,10 +96,10 @@
      "output_type": "stream",
      "text": [
       "Listen:\n",
-      "[1, 2, 3, 4, '5', 6, 7, 8, 9]\n",
+      "[1, 2, 3, 4, '5', 6, 7, 8, 10]\n",
       "1\n",
       "[1, 3, '5', 7]\n",
-      "[[1, 2], 2, 3, 4, '5', 6, 7, 8, 9]\n",
+      "[[1, 2], 2, 3, 4, '5', 6, 7, 8, 10]\n",
       "Tupel:\n",
       "(1, 2, 3, 4, 5)\n",
       "(4, 5)\n",
@@ -113,7 +113,7 @@
     "print(\"Listen:\")\n",
     "my_list = [1,2,3,4,\"5\"]    # können verschiedene Datentypen enthalten\n",
     "my_list.append(6)          # können erweitert werden \n",
-    "my_list.extend([7,8,9])    \n",
+    "my_list.extend([7,8,10])    \n",
     "print(my_list)\n",
     "print(my_list[0])          # Index basierter Zugriff\n",
     "print(my_list[:8:2])       # Slicing\n",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "43a70803",
    "metadata": {},
    "outputs": [
@@ -152,10 +152,10 @@
      "evalue": "unhashable type: 'list'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_3431/4145752727.py\u001b[0m in \u001b[0;36m<cell line: 13>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0ml\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mmy_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"spam\"\u001b[0m          \u001b[0;31m# Fehler! keys müssen unveränderlich sein!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'list'"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 13\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mkey\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m my_dict)      \u001b[38;5;66;03m# Prüfung ob ein key im dictionary ist\u001b[39;00m\n\u001b[0;32m     12\u001b[0m l \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m]\n\u001b[1;32m---> 13\u001b[0m \u001b[43mmy_dict\u001b[49m\u001b[43m[\u001b[49m\u001b[43ml\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mspam\u001b[39m\u001b[38;5;124m\"\u001b[39m          \u001b[38;5;66;03m# Fehler! keys müssen unveränderlich sein!\u001b[39;00m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'list'"
      ]
     }
    ],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "c274f84e",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "782f0cc1",
    "metadata": {},
    "outputs": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "9beb1feb",
    "metadata": {},
    "outputs": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "a1270b7a",
    "metadata": {},
    "outputs": [
@@ -340,9 +340,9 @@
     }
    ],
    "source": [
-    "def my_add(a,b,*args,**kwargs):                           # *args und **kwargs können für beliebige anzahl an argumenten stehen\n",
-    "    if kwargs:                                            # args ist ein Tupel, kwargs ist ein Dictionary\n",
-    "        print(\"Additional keyword arguments are\",kwargs)  # nützlich vor allem zum durchreichen von argumenten an andere funktionen\n",
+    "def my_add(a,b,*args,**keywargs):                           # *args und **kwargs können für beliebige anzahl an argumenten stehen\n",
+    "    if keywargs:                                            # args ist ein Tupel, kwargs ist ein Dictionary\n",
+    "        print(\"Additional keyword arguments are\",keywargs)  # nützlich vor allem zum durchreichen von argumenten an andere funktionen\n",
     "    return a+b+sum(args)\n",
     "\n",
     "print(my_add(1,2,3,4,additional=\"spam\"))"
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f0dfb437",
    "metadata": {},
    "outputs": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "beeead63",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "58b47103",
    "metadata": {},
    "outputs": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "affd0565",
    "metadata": {},
    "outputs": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "4a49c902",
    "metadata": {},
    "outputs": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "ae9fc09b",
    "metadata": {},
    "outputs": [
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9506f69f",
    "metadata": {},
    "outputs": [
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5b8f964c",
    "metadata": {},
    "outputs": [
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "00cedde7",
    "metadata": {},
    "outputs": [
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "cc6092f7",
    "metadata": {},
    "outputs": [
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "4ba9dc6b",
    "metadata": {},
    "outputs": [],
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "754ac034",
    "metadata": {},
    "outputs": [
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "221cb935",
    "metadata": {},
    "outputs": [
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "6d50b0f5",
    "metadata": {},
    "outputs": [],
@@ -1028,10 +1028,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b40f0b28",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numbers are considered True...\n",
+      "...unless they are 0\n",
+      "strings are considered True...\n",
+      "...unless they are empty\n",
+      "lists are considered True...\n",
+      "...unless they are empty\n"
+     ]
+    }
+   ],
    "source": [
     "# Pythonic if: \"truthy\" und \"falsey\"\n",
     "if 1:\n",
@@ -1065,10 +1078,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "c4bb14dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vorname\tnachname\n",
+      "Robert\tSchrÃ¶der\n",
+      "Lara\tMÃ¼ller\n",
+      "Gustav\tSchmitt\n"
+     ]
+    }
+   ],
    "source": [
     "# schlecht:\n",
     "f = open('data.txt')\n",
@@ -1079,7 +1103,9 @@
     "\n",
     "# besser:\n",
     "with open('data.txt') as f:\n",
-    "    data = f.read()"
+    "    data = f.read()\n",
+    "\n",
+    "print(data) # meine Ergänzung"
    ]
   },
   {
@@ -1093,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "f652b0f1",
    "metadata": {},
    "outputs": [
@@ -1102,16 +1128,16 @@
      "output_type": "stream",
      "text": [
       "8448728\n",
-      "104\n"
+      "200\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<generator object <genexpr> at 0x7f67c878a8f0>"
+       "<generator object <genexpr> at 0x0000024C08345BE0>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1133,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "cd2dea1e",
    "metadata": {},
    "outputs": [
@@ -1180,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8519af7d",
    "metadata": {},
    "outputs": [],
@@ -1211,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "0a5d0197",
    "metadata": {},
    "outputs": [
@@ -1233,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0a6c9621",
    "metadata": {},
    "outputs": [
@@ -1263,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "18ebe206",
    "metadata": {},
    "outputs": [
@@ -1303,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "3f538c22",
    "metadata": {},
    "outputs": [
@@ -1311,7 +1337,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "debug\n",
       "foo\n",
+      "debug\n",
       "bar\n"
      ]
     }
@@ -1329,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "d133795b",
    "metadata": {},
    "outputs": [],
@@ -1346,23 +1374,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "1aacaf41",
    "metadata": {},
    "outputs": [
     {
-     "ename": "RecursionError",
-     "evalue": "maximum recursion depth exceeded",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRecursionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_4090/3348042513.py\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mbuiltins\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprint\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnew_print\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"test\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/tmp/ipykernel_4090/3348042513.py\u001b[0m in \u001b[0;36mnew_print\u001b[0;34m(value)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mnew_print\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mold_print\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"debug\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mold_print\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/tmp/ipykernel_4090/2813116114.py\u001b[0m in \u001b[0;36mnew_print\u001b[0;34m(value)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mnew_print\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mold_print\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"debug\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mold_print\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "... last 1 frames repeated, from the frame below ...\n",
-      "\u001b[0;32m/tmp/ipykernel_4090/2813116114.py\u001b[0m in \u001b[0;36mnew_print\u001b[0;34m(value)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mnew_print\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mold_print\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"debug\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mold_print\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRecursionError\u001b[0m: maximum recursion depth exceeded"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test\n"
      ]
     }
    ],
@@ -1387,7 +1407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
